[package]
name = "chocolate547"
version = "0.1.0"
description = "Chocolate is sweet."
repository = "https://github.com/romw314/chocolate547/"
edition = "2018"
license = "Unlicense"

[[bin]]
name = "chocolate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.13", features = ["std", "cargo"], default-features = false }
