[package]
name = "chocolate547"
version = "0.2.0"
description = "Chocolate is sweet."
repository = "https://github.com/romw314/chocolate547/"
edition = "2018"
license = "Unlicense"

[[bin]]
name = "chocolate"
path = "src/main.rs"

[[bin]]
name = "choco-ghost"
path = "src/choco-ghost.rs"

[dependencies]
clap = { version = "4.4.13", features = ["std", "cargo"], default-features = false }
